<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".activity.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@drawable/bar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.15"
            android:src="@drawable/ic_menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|left"
            android:lineSpacingExtra="8sp"
            android:text="@string/txtHeader"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.15"
            android:src="@drawable/ic_more" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@mipmap/mapbg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="74dp"
                android:layout_marginRight="74dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/homebg" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/txtHomeTitle"
                android:textColor="#ffffff"
                android:textSize="29sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/txtHomeContent"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="0.25"
                android:background="@drawable/btn"
                android:padding="12dp"
                android:text="@string/btnHome"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@mipmap/footerbg" />

    </LinearLayout>

</LinearLayout>