<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.55"
        android:background="@mipmap/mapbg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nationality"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etNationality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtNationality"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pbirth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etPlaceBirth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtPBirth"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pissue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etPIssue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtPIssue"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_expirydate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtExpDate"
                    android:inputType="date"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cidnumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etCidNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtCidNumber"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_passnumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etPassNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtPNumber"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dbirth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etDateBirth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtDBirth"
                    android:inputType="date"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_issuedate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etIssueDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtPIssueDate"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cidnumber2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.15">

                <EditText
                    android:id="@+id/etCidNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txtCidNumber"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <LinearLayout
                android:id="@+id/llPassCopy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/btn"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPassCopy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:src="@drawable/ic_attachment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/txtPassportCopy"
                    android:textColor="@color/colorAccent"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCivilId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/btn"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCivilId"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:src="@drawable/ic_attachment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/txtCICopy"
                    android:textColor="@color/colorAccent"
                    android:textSize="10sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <LinearLayout
                android:id="@+id/llResidenceCopy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/btn"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgResidenceCopy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:src="@drawable/ic_attachment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/txtRCopy"
                    android:textColor="@color/colorAccent"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llOtherDocument"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/btn"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOtherDocument"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:src="@drawable/ic_attachment" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/txtOtherD"
                    android:textColor="@color/colorAccent"
                    android:textSize="10sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@mipmap/footerbg"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:src="@drawable/ic_circle_empty" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.16"
                android:src="@drawable/ic_circle_fill" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:src="@drawable/ic_circle_empty" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

    </LinearLayout>

</LinearLayout>