<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.6"
        android:background="@mipmap/mapbg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="0.2">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirmpass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="0.2">

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtConfirm"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.15"
            android:background="@drawable/btn"
            android:padding="12dp"
            android:text="@string/btnRegister"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@mipmap/footerbg"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:src="@drawable/ic_circle_empty" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:src="@drawable/ic_circle_empty" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.16"
                android:src="@drawable/ic_circle_fill" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />
        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

    </LinearLayout>

</LinearLayout>